--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -17,10 +17,11 @@ jobs:
     name: Upddate-gist
     runs-on: ubuntu-latest
     env:
+          DC_KEY: ${{ secrets.DC_KEY}}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: 8bf56353bcb3a8e798b55b546b9619cf
-          STEAM_API_KEY: ${{ secrets.STEAM_API_KEY }}
-          STEAM_ID: ${{ secrets.STEAM_ID }}
+          STEAM_API_KEY: ${{ secrets.ST_KEY}}
+          STEAM_ID: ${{ secrets.ST_ID }}
     steps:
 
     - name: Set up Go 1.x
