--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -1,20 +1,12 @@
 name: Updater
 
 on:
-  push:
-    branches: 
-      - master
-  pull_request:
-    branches:
-      - master
   schedule:
-    - cron: '0 19 * * *' # Run every day at midnight WIB
-    
+   - cron: '0 19 * * *' # Run every day at midnight WIB
 
 jobs:
-
   build:
-    name: Upddate-gist
+    name: Update-gist
     runs-on: ubuntu-latest
     env:
           DC_KEY: ${{ secrets.DC_KEY}}
@@ -22,18 +14,34 @@ jobs:
           GIST_ID: 8bf56353bcb3a8e798b55b546b9619cf
           STEAM_API_KEY: ${{ secrets.ST_KEY}}
     steps:
-      
-    - name: Run updater.py
-      env:
-        HEADERS: ${{ secrets.DC_KEY }}
-      run: |
+      - name: Checkout master
+        uses: actions/checkout@v4
+
+      - name: Set up NodeJS
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+
+      - name: Set up python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+
+      - name: Install NodeJS packages
+        run: |
+          npm install
+          
+      - name: Run updater.py
+        env:
+          HEADERS: ${{ secrets.DC_KEY }}
+        run: |
          python updater.py
 
-    - name: Commit and push if changed
-      run: |
-        git config user.name "Windstrom5"
-        git config user.email "anggagant@gmail.com"
-        git diff
-        git add README.md generated-profile.png
-        git commit -sm "workflow: update some magic~"
-         git push
+      - name: Commit and push if changed
+        run: |
+          git config user.name "Windstrom5"
+          git config user.email "anggagant@gmail.com"
+          git diff
+          git add README.md generated-discord.png
+          git commit -sm "updating redme"
+           git push
