--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -2,14 +2,15 @@ name: Updater
 
 on:
   schedule:
-   - cron: '0 19 * * *' # Run every day at midnight WIB
+    - cron: '0 19 * * *' # Run every day at midnight WIB
 
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-          DC_KEY: ${{ secrets.DC_KEY}}
-          STEAM_API_KEY: ${{ secrets.ST_KEY}}
+      DC_KEY: ${{ secrets.DC_KEY }}
+      STEAM_API_KEY: ${{ secrets.ST_KEY }}
+
     steps:
       - name: Checkout master
         uses: actions/checkout@v4
@@ -19,10 +20,13 @@ jobs:
         with:
           node-version: 20.x
 
-      - name: Set up python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
+
+      - name: Initialize npm package
+        run: npm init -y
 
       - name: Install NodeJS packages
         run: |
@@ -32,7 +36,7 @@ jobs:
         env:
           HEADERS: ${{ secrets.DC_KEY }}
         run: |
-         python updater.py
+          python updater.py
 
       - name: Commit and push if changed
         run: |
@@ -40,5 +44,5 @@ jobs:
           git config user.email "anggagant@gmail.com"
           git diff
           git add README.md generated-discord.png
-          git commit -sm "updating redme"
-           git push
+          git commit -sm "Updating readme"
+          git push
