--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -1,14 +1,15 @@
-name: "Update README.md"
+name: Updater
 
 on:
   schedule:
-    - cron: "0 */3 * * *"
-  workflow_dispatch:
+   - cron: '0 19 * * *' # Run every day at midnight WIB
 
 jobs:
-  check_and_update:
+  build:
     runs-on: ubuntu-latest
-
+    env:
+          DC_KEY: ${{ secrets.DC_KEY}}
+          STEAM_API_KEY: ${{ secrets.ST_KEY}}
     steps:
       - name: Checkout master
         uses: actions/checkout@v4
@@ -26,12 +27,12 @@ jobs:
       - name: Install NodeJS packages
         run: |
           npm install
-
+          
       - name: Run updater.py
         env:
           HEADERS: ${{ secrets.DC_KEY }}
         run: |
-          python updater.py
+         python updater.py
 
       - name: Commit and push if changed
         run: |
@@ -39,5 +40,5 @@ jobs:
           git config user.email "anggagant@gmail.com"
           git diff
           git add README.md generated-discord.png
-          git commit -sm "Updating readme"
-          git push
+          git commit -sm "updating redme"
+           git push
