--- a/package.json
+++ b/package.json
@@ -8,5 +8,14 @@
   },
   "author": "Windstrom5",
   "type": "module",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+     "url": "git+https://github.com/Windstrom5/Windstrom5.git"
+  },
+  "dependencies": {
+    "axios": "^1.6.8",
+    "canvas": "^2.11.2",
+     "dotenv": "^16.4.5"
+  }
 }
