--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -1,6 +1,10 @@
 name: Updater
 
 on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
   schedule:
    - cron: '0 19 * * *' # Run every day at midnight WIB
   workflow_dispatch:
@@ -9,37 +13,30 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-          DC_KEY: ${{ secrets.DC_KEY}}
-          STEAM_API_KEY: ${{ secrets.ST_KEY}}
+            STEAM_API_KEY: ${{ secrets.ST_KEY }}
+            STEAM_ID: 76561198881808539
+            UPDATE_OPTION: MARKDOWN
+            MARKDOWN_FILE: README.md
+            STEAM_OPTION: ALLTIME_AND_RECENT
     steps:
-      - name: Checkout master
-        uses: actions/checkout@v4
-
-      - name: Set up NodeJS
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
-
-      - name: Set up python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
-
-      - name: Install NodeJS packages
-        run: |
-          npm install
-          
-      - name: Run updater.py
-        env:
-          HEADERS: ${{ secrets.DC_KEY }}
-        run: |
-         python Updater.py
-
-      - name: Commit and push if changed
-        run: |
-          git config user.name "Windstrom5"
-          git config user.email "anggagant@gmail.com"
-          git diff
-          git add README.md generated-discord.png
-          git commit -sm "updating redme"
-           git push
+        - name: Set up Go 1.x
+          uses: actions/setup-go@v2
+          with:
+              go-version: ^1.14
+              id: go
+        - name: Check out repo
+          uses: actions/checkout@v2
+        - uses: actions/setup-go@v2
+        - name: Clone and run steam-box
+          run: |-
+                git clone https://github.com/Windstrom5/Windstrom5.git
+                cd Windstrom5 && go build -o steam ./box/main.go
+                mv ./steam ../ && cd .. && rm -rf Windstrom5/
+        - name: Commit and push
+          run: |-
+                ./steam
+                git config user.email "anggagant@gmail.com" && git config --global user.name "Windstrom5"
+                git config --global pull.rebase false
+                git diff
+                git add README.md && git commit -m "Update Steam playtime" || exit 0
+                git pull && git push
