--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -6,37 +6,43 @@ on:
   pull_request:
     branches: [main]
   schedule:
-   - cron: '0 19 * * *' # Run every day at midnight WIB
+    - cron: '0 19 * * *' # Run every day at midnight WIB
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-            STEAM_API_KEY: ${{ secrets.ST_KEY }}
-            STEAM_ID: 76561198881808539
-            UPDATE_OPTION: MARKDOWN
-            MARKDOWN_FILE: README.md
-            STEAM_OPTION: ALLTIME_AND_RECENT
+      STEAM_API_KEY: ${{ secrets.ST_KEY }}
+      STEAM_ID: 76561198881808539
+      UPDATE_OPTION: MARKDOWN
+      MARKDOWN_FILE: README.md
+      STEAM_OPTION: ALLTIME_AND_RECENT
+
     steps:
-        - name: Set up Go 1.x
-          uses: actions/setup-go@v2
-          with:
-              go-version: ^1.14
-              id: go
-        - name: Check out repo
-          uses: actions/checkout@v2
-        - uses: actions/setup-go@v2
-        - name: Clone and run steam-box
-          run: |-
-                git clone https://github.com/Windstrom5/Windstrom5.git
-                cd Windstrom5 && go build -o steam ./box/main.go
-                mv ./steam ../ && cd .. && rm -rf Windstrom5/
-        - name: Commit and push
-          run: |-
-                ./steam
-                git config user.email "anggagant@gmail.com" && git config --global user.name "Windstrom5"
-                git config --global pull.rebase false
-                git diff
-                git add README.md && git commit -m "Update Steam playtime" || exit 0
-                git pull && git push
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.14
+
+      - name: Check out repository
+        uses: actions/checkout@v2
+
+      - name: Clone and build steam-box
+        run: |
+          git clone https://github.com/Windstrom5/Windstrom5.git
+          cd Windstrom5/box && go build -o steam main.go
+          mv steam ../ && cd .. && rm -rf Windstrom5/
+
+      - name: Run steam-box
+        run: |
+          ./steam
+
+      - name: Commit and push changes
+        run: |
+          git config user.email "anggagant@gmail.com"
+          git config --global user.name "Windstrom5"
+          git config --global pull.rebase false
+          git add README.md
+          git diff --quiet && git diff --staged --quiet || git commit -m "Update Steam playtime"
+          git pull --rebase && git push origin main
