--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -10,12 +10,13 @@ jobs:
     name: Update-steam-playtime
     runs-on: ubuntu-latest
     env:
+      STEAM_OPTION: ALLTIME_AND_RECENT
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      GIST_ID: 8bf56353bcb3a8e798b55b546b9619cf
       STEAM_API_KEY: ${{ secrets.ST_KEY }}
       STEAM_ID: 76561198881808539
-      UPDATE_OPTION: MARKDOWN
+      UPDATE_OPTION: GIST_AND_MARKDOWN
       MARKDOWN_FILE: README.md
-      STEAM_OPTION: ALLTIME_AND_RECENT
-
     steps:
       - name: Set up Go 1.x
         uses: actions/setup-go@v2
@@ -27,9 +28,9 @@ jobs:
       - uses: actions/setup-go@v2
       - name: Clone and run steam-box
         run: |-
-          git clone https://github.com/torresflo/steam-box-for-readme.git
-          cd steam-box-for-readme && go build -o steam ./cmd/box/main.go
-          mv ./steam ../ && cd .. && rm -rf steam-box-for-readme/
+          git clone https://github.com/YouEclipse/steam-box.git 
+          cd steam-box && go build -o steam ./cmd/box/main.go
+          mv ./steam ../ && cd .. && rm -rf steam-box/
       - name: Commit and push
         run: |-
           ./steam
