--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,20 +1,24 @@
 name: Update steam playtime
 
 on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
   schedule:
     - cron: "0 0 * * *"
-  workflow_dispatch:
 
 jobs:
   build:
     name: Update-steam-playtime
     runs-on: ubuntu-latest
     env:
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      GIST_ID: 10c3b5ab143aff46464bb5dcd33bbcca
       STEAM_API_KEY: ${{ secrets.ST_KEY }}
       STEAM_ID: 76561198881808539
-      UPDATE_OPTION: MARKDOWN
+      UPDATE_OPTION: GIST_AND_MARKDOWN
       MARKDOWN_FILE: README.md
-      STEAM_OPTION: ALLTIME_AND_RECENT
 
     steps:
       - name: Set up Go 1.x
@@ -27,15 +31,13 @@ jobs:
       - uses: actions/setup-go@v2
       - name: Clone and run steam-box
         run: |-
-          git clone https://github.com/torresflo/steam-box-for-readme.git
-          cd steam-box-for-readme && go build -o steam ./cmd/box/main.go
-          mv ./steam ../ && cd .. && rm -rf steam-box-for-readme/
+          git clone https://github.com/Windstrom5/steam-box.git 
+          cd steam-box && go build -o steam ./cmd/box/main.go
+          mv ./steam ../ && cd .. && rm -rf steam-box/
       - name: Commit and push
         run: |-
           ./steam
-          git config user.email "anggagant@gmail.com"
-          git config --global user.name "Windstrom5"
-          git config --global pull.rebase false
+          git config --global user.email "bot@github.com" && git config --global user.name "Steam-Bot"
           git diff
-          git add README.md && git commit -m "Update Steam playtime" || exit 0
+          git add README.md && git commit -m ":memo: update profile" || exit 0
           git pull && git push
