--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -38,9 +38,12 @@ jobs:
       - name: Commit and push
         run: |-
           ./steam
-          git config user.email "anggagant@gmail.com"
-          git config --global user.name "Windstrom5"
-          git config --global pull.rebase false
-          git diff
-          git add README.md && git commit -m "Update Steam playtime" || exit 0
-          git pull && git push
+              git config user.email "anggagant@gmail.com"
+              git config --global user.name "Windstrom5"
+              git config --global pull.rebase false
+              git remote add origin_with_token "https://<username>:${{ secrets.GH_TOKEN }}@github.com/Windstrom5/steam-box.git"
+              git fetch origin_with_token
+              git checkout main
+              git add README.md && git commit -m "Update Steam playtime" || exit 0
+              git pull --rebase origin_with_token main
+              git push origin_with_token main
