--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -41,7 +41,7 @@ jobs:
               git config user.email "anggagant@gmail.com"
               git config --global user.name "Windstrom5"
               git config --global pull.rebase false
-              git remote add origin_with_token "https://<username>:${{ secrets.GH_TOKEN }}@github.com/Windstrom5/steam-box.git"
+              git remote add origin_with_token "https://Windstrom5:${{ secrets.GH_TOKEN }}@github.com/Windstrom5/steam-box.git"
               git fetch origin_with_token
               git checkout main
               git add README.md && git commit -m "Update Steam playtime" || exit 0
