--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -35,15 +35,31 @@ jobs:
           git clone https://github.com/Windstrom5/steam-box.git 
           cd steam-box && go build -o steam ./cmd/box/main.go
           mv ./steam ../ && cd .. && rm -rf steam-box/
-      - name: Commit and push
-        run: |-
-          ./steam
-              git config user.email "anggagant@gmail.com"
-              git config --global user.name "Windstrom5"
-              git config --global pull.rebase false
-              git add README.md && git commit -m "Update Steam playtime" || exit 0
-              git remote add origin_with_token "https://Windstrom5:${{ secrets.GH_TOKEN }}@github.com/Windstrom5/steam-box.git"
-              git fetch origin_with_token
-              git checkout master
-              git pull --rebase origin_with_token master
-              git push origin_with_token master
+      - name: Fetch Gist content
+        id: fetch-gist
+        uses: actions/github-script@v5
+        with:
+          github-token: ${{ secrets.GH_TOKEN }}
+          script: |
+            const gistId = '${{ env.GIST_ID }}';
+            const { data: gist } = await github.gists.get({ gist_id: gistId });
+            const filename = Object.keys(gist.files)[0];
+            const content = gist.files[filename].content;
+            console.log(content);
+            return content;
+
+      - name: Append Gist content to README.md
+        run: |
+          echo "\n\n<!-- Gist content start -->\n${{ steps.fetch-gist.outputs.result }}\n<!-- Gist content end -->" >> README.md
+
+      - name: Commit and push changes
+        run: |
+          git config user.email "anggagant@gmail.com"
+          git config --global user.name "Windstrom5"
+          git config --global pull.rebase false
+          git add README.md && git commit -m "Update Steam playtime" || exit 0
+          git remote add origin_with_token "https://Windstrom5:${{ secrets.GH_TOKEN }}@github.com/Windstrom5/steam-box.git"
+          git fetch origin_with_token
+          git checkout master
+          git pull --rebase origin_with_token master
+          git push origin_with_token master
