--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -53,8 +53,8 @@ jobs:
 
 
       - name: Append Gist content to README.md
-        run: |
-          echo "\n\n<!-- Gist content start -->\n${{ steps.fetch-gist.outputs.result }}\n<!-- Gist content end -->" >> README.md
+        run: echo "\n\n<!-- Gist content start -->\n$(cat gist_content.txt)\n<!-- Gist content end -->" >> README.md
+
 
       - name: Commit and push changes
         run: |
