--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -51,19 +51,12 @@ jobs:
               console.log(content);
               return content;
 
-
       - name: Append Gist content to README.md
         run: echo "\n\n<!-- Gist content start -->\n$(cat gist_content.txt)\n<!-- Gist content end -->" >> README.md
 
-
       - name: Commit and push changes
         run: |
-          git config user.email "anggagant@gmail.com"
-          git config --global user.name "Windstrom5"
-          git config --global pull.rebase false
-          git add README.md && git commit -m "Update Steam playtime" || exit 0
-          git remote add origin_with_token "https://Windstrom5:${{ secrets.GH_TOKEN }}@github.com/Windstrom5/steam-box.git"
-          git fetch origin_with_token
-          git checkout master
-          git pull --rebase origin_with_token master
-          git push origin_with_token master
+         git config --global user.email "bot@github.com" && git config --global user.name "Steam-Bot"
+          git diff
+          git add README.md && git commit -m ":memo: update profile" || exit 0
+          git pull && git push
