--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -35,28 +35,11 @@ jobs:
           git clone https://github.com/Windstrom5/steam-box.git 
           cd steam-box && go build -o steam ./cmd/box/main.go
           mv ./steam ../ && cd .. && rm -rf steam-box/
-      - name: Fetch Gist content
-        id: fetch-gist
-        uses: actions/github-script@v5
-        with:
-            github-token: ${{ secrets.GH_TOKEN }}
-            script: |
-              const gistId = '${{ env.GIST_ID }}';
-              const response = await github.request('GET /gists/{gist_id}', {
-                gist_id: gistId
-              });
-              const gist = response.data;
-              const filename = Object.keys(gist.files)[0];
-              const content = gist.files[filename].content;
-              console.log(content);
-              return content;
-
-      - name: Append Gist content to README.md
-        run: echo "\n\n<!-- Gist content start -->\n$(cat gist_content.txt)\n<!-- Gist content end -->" >> README.md
-
-      - name: Commit and push changes
-        run: |
-         git config --global user.email "bot@github.com" && git config --global user.name "Steam-Bot"
+           - name: Commit and push
+      - name: Commit and push
+        run: |-
+          ./steam
+          git config --global user.email "bot@github.com" && git config --global user.name "Steam-Bot"
           git diff
           git add README.md && git commit -m ":memo: update profile" || exit 0
           git pull && git push
