--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,12 +2,11 @@ name: Update steam playtime
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    branches: [master]
   schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+    - cron: "10 * * * *"
 
 jobs:
   build:
@@ -15,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      GIST_ID: 61b6ca8415c3eb4a86441bf39f516509
+      GIST_ID: 8bf56353bcb3a8e798b55b546b9619cf
       STEAM_API_KEY: ${{ secrets.STEAM_API_KEY }}
       STEAM_ID: ${{ secrets.STEAM_ID }}
       UPDATE_OPTION: GIST_AND_MARKDOWN
@@ -31,20 +30,18 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-go@v2
       - name: Clone and run steam-box
-        run: |-
-          git clone https://github.com/Windstrom5/steam-box.git 
+        run: |
+          git clone https://github.com/YouEclipse/steam-box.git 
           cd steam-box && go build -o steam ./cmd/box/main.go
           mv ./steam ../ && cd .. && rm -rf steam-box/
-           - name: Commit and push
+
       - name: Commit and push
         run: |
           ./steam
-          git config user.email "anggagant@gmail.com"
-          git config --global user.name "Windstrom5"
-          git config --global pull.rebase false
-          git add README.md && git commit -m "Update Steam playtime" || exit 0
-          git remote add origin_with_token "https://Windstrom5:${{ secrets.GH_TOKEN }}@github.com/Windstrom5/steam-box.git"
+          git config --global user.email "bot@github.com" && git config --global user.name "Steam-Bot"
+          git remote add origin_with_token "https://github.com/${{ github.repository_owner }}/steam-box.git"
           git fetch origin_with_token
           git checkout master
           git pull --rebase origin_with_token master
+          git add README.md && git commit -m ":memo: update profile" || exit 0
           git push origin_with_token master
