--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -40,9 +40,6 @@ jobs:
         run: |
           ./steam
           git config --global user.email "bot@github.com" && git config --global user.name "Steam-Bot"
-          git remote add origin_with_token "https://github.com/${{ github.repository_owner }}/steam-box.git"
-          git fetch origin_with_token
-          git checkout master
-          git pull --rebase origin_with_token master
+          git diff
           git add README.md && git commit -m ":memo: update profile" || exit 0
-          git push origin_with_token master
+          git pull && git push
